site plan added

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>My Family's Site Plan</h1>
+    <h1>White water rafting Site Plan</h1>
     <h2>Olena Slobodeniuk</h2>
     <h2>WDD 130-01</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -20,17 +20,17 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>The pupose of this site is getting aquaintance with my family members,
-         presentation of our achivements and future plans. Site will also contain
-         stories and experience of the family members.</p>
+    <p>The pupose of this site is getting aquaintance with water rafting,
+         presentation of our subscribers' achivements and future plans. 
+         Site will also contain stories and experience which concerns rafting.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>Family members and friends will visit this site tp add the the information 
-        about themselves and to see the information about the others.
-        On this site pepople are supposed to share information, to communicate,
-        ask for an advice and support if needed. 
-        Audience will usually access my site using desktop, laptop and mobile devices. 
+    <p>Subscribers and guests will visit this site tp add the the information 
+        about themselves and see the information about the others.
+        On this site people are supposed to share information, communicate,
+        ask for advice and support if needed, book tours. 
+        Audience will usually access this site using desktop, laptop and mobile devices. 
     </p>
     <!-- change this -->
 
@@ -38,7 +38,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/photo_family.jpeg" alt="Logo image" />
+    <img src="images/rafting_logo.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
