--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -54,10 +54,10 @@
 
     <table class="colors">
       <tr>
-        <th>Primary</th>
-        <th>Secondary</th>
-        <th>Accent 1</th>
-        <th>Accent 2</th>
+        <th>#4D9078</th>
+        <th>#F78154</th>
+        <th>#F2C14E</th>
+        <th>#5FAD56</th>
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
