--- a/wwr/index.html
+++ b/wwr/index.html
@@ -18,18 +18,18 @@
                 <a href="index.htm">Home</a>
                 <a href="#">Page 2</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="contuctus.html">Contact US</a>
+                <a href="contactus.html">Contact US</a>
             </nav>
         </header>
         <div id="hero">
-            <div id="hero=box">
+            <div id="hero-box">
                 <img id="hero-img" src="images/hero.png" alt="People enjouing white water rafting">
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">Have An Adventure</h1>
                 <h4>Make Memories with Dry Oar </h4>
                 <div class="button-box">
-                    <a class="book" href="contuctus.html">Book Now</a>
+                    <a class="book" href="rates.html">Book Now</a>
                 </div>
             </section>
         </div>
@@ -61,7 +61,7 @@
         <footer>
             <p>Dry Oar &copy; 2023 - Olena Slobodeniuk</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="contuctus.html">Contact Us</a></p>
+            <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
