--- a/portfolio/site-plan.html
+++ b/portfolio/site-plan.html
@@ -78,7 +78,7 @@
         Heading Font: Roboto  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Roboto  <!-- change this -->
+        Paragraph Font: Courier Prime  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
