--- a/portfolio/site-plan.html
+++ b/portfolio/site-plan.html
@@ -101,8 +101,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">What I Do</a>
+        <a href="#">Contact Me</a>
       </nav>
       <hr>
       <h2>
@@ -113,10 +113,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          What I Do (page 2) <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Contact Me (page 3)  <!-- change this -->
         </div>
 
         <div class="top">
@@ -138,29 +138,94 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Welcome to my site!
+      </p>
+      <p>
+        My name is Olena Slobodeniuk.
+      </p>
+      <p>
+         I am professional accountant with the over 19 years of experience.
+      </p>
+      <p>
+        I am detail oriented , organized, independent worker with strong time-management 
+        and problem-solving skills. I am able to learn quickly, adapt well to new technologies
+        and work under pressure and within tight deadlines. Let's get acquainted!
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
+        <img src="images/me.png" alt="image1 for homepage">
         <img src="#" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>What I Do (Page 2)</h3>
+      <h3>
+         Experience 
+      </h3>
       <p>
-        [Written copy for the Page 2 here]
+       
+        Chief accountant
+        (June 2018 — March 2022'):
+        Manufacturing Enterprise Limited Liability Company "Akvaton"
+       (Enameled wire production, wholesale, foreign economic activity; 
+       number of subordinates - 3 pers., workforce - 85 people).
+       •	Kept accurate bookkeeping which gives good results of inspection by regulatory authorities;
+       •	Created team –work between different departments of the company, which increased client’s service quality for 13%;
+       •	Improved ineffective policies in accounting, which fastened the provision of information to higher management;
       </p>
+      <p>
+        Chief accountant
+        (July 2015 – May 2018):
+        Private Enterprise “Rivne-Flex”                                                                        
+        (Printing and manufacturing of packaging.
+        Workforce - 50 people, number of subordinates - 2 pers.)
+        •	Implemented new accounting software for better supplying of information for managers;
+        •	Developed skills and knowledge of the accountants, we could replace each other in case of absence and provide information for higher management;
+        •	Improved the procedure of salary calculating, which helped employees to be more informed about their payment. 
+      </p>
+      <h3>
+        Education
+     </h3>
+     <p>
+      Bachelor’s degree in Accounting and Auditing (completed in June 2003),
+      National University of water and Environmental Engineering, Ukraine
+     </p>
+     <p>
+      Pathway Connect Certificate (completed in December 2022)
+      BUY-Pathway Worldwide, USA:
+      -	a year-long program teaching life skills, English, algebra and personal finance 
+     -	introductory course “Programing building blocks”
+     </p>
+     <p>
+      BYU-Idaho, USA, “WEB & Computer Programing” (started in January 2023, currently studying)
+     </p>
+     <h3>
+      Skills
+     </h3>
+     <p>
+      •	Attention to details
+      •	Proficient PC user (MS Word, MS Excel)
+      •	Upper-intermediate level of English
+      •	Fluent Ukrainian and Russian
+      •	Beginner level of French
+      •	Teamwork and collaboration
+      •	Tax monitoring and control
+      •	Accurate bookkeeping
+      •	Good organization skills
+      •	High analytical skills 
+     </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/pexels-realtoughcandycom-11035474.jpg" alt="image1 for page">
+        <img src="images/pexels-pixabay-53621.jpg" alt="image2 for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Contact Me (Page 3)</h3>
       <p>
-        [Written copy for the Page 3 here]
+        You can always reach me by: phone +1(587) 433 55 93 
+        or email lena2805sl@gmail. Don't hesitate contacting me!
+
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/pexels-pixabay-263564.jpg" alt="image1 for page3">
+        <img src="images/I can.png" alt="image for page3">
 
       </ul>
       <hr>
