--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -127,7 +127,9 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Rates/Dates [Page 2]</h3>
+
+    <img src="images/rafting_wireframe_2_page-0001.jpg" aly="rates dates wireframe" alt="rates dates wireframe"/>
 
     <!-- <img src="#" alt="page 2   wireframe"> -->
   </main>
