--- a/wwr/index.html
+++ b/wwr/index.html
@@ -16,7 +16,7 @@
             </a>
             <nav>
                 <a href="index.htm">Home</a>
-                <a href="#">Page 2</a>
+                <a href="dates.html">Rates/Dates</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact US</a>
             </nav>
