--- a/portfolio/site-plan.html
+++ b/portfolio/site-plan.html
@@ -157,9 +157,7 @@
 
       </ul>
       <h3>What I Do (Page 2)</h3>
-      <h3>
-         Experience 
-      </h3>
+      <h3>Experience</h3>
       <p>
        
         Chief accountant
@@ -213,8 +211,8 @@
       •	High analytical skills 
      </p>
       <p>Images for the Page 2</p>
-        <img src="images/pexels-realtoughcandycom-11035474.jpg" alt="image1 for page">
-        <img src="images/pexels-pixabay-53621.jpg" alt="image2 for page">
+        <img src="images/pexels-realtoughcandycom-11035474.jpg" alt="image1 for page2">
+        <img src="images/pexels-pixabay-53621.jpg" alt="image2 for page2">
 
       </ul>
       <h3>Contact Me (Page 3)</h3>
@@ -225,7 +223,7 @@
       </p>
       <p>Images for the Page 3</p>
         <img src="images/pexels-pixabay-263564.jpg" alt="image1 for page3">
-        <img src="images/I can.png" alt="image for page3">
+        <img src="images/I can.png" alt="image2 for page3">
 
       </ul>
       <hr>
