--- a/portfolio/whatido.html
+++ b/portfolio/whatido.html
@@ -59,6 +59,7 @@
                 <p><a href="index.htm">Home</a></p>
                 <p><a href="what_i_do.html">What I do</a></p>
                 <p><a href="contactus.html">Contact me</a></p>
+                <p><a href="site-plan.html">Site plan</a></p>
         </footer>
     </div>
 </body>
