--- a/portfolio/whatido.html
+++ b/portfolio/whatido.html
@@ -30,29 +30,40 @@
         <main class="whatido-grid">
             <h1 class="whatido-title">What I do</h1>
             <p> </p>
-            <h2>Experience</h2>
-            <p>Chief accountant (June 2018 — March 2022'): Manufacturing Enterprise Limited Liability Company "Akvaton"
-               (Enameled wire production, wholesale, foreign economic activity; number of subordinates - 3 pers., 
-               workforce - 85 people). • Kept accurate bookkeeping which gives good results of inspection by regulatory authorities;
-               • Created team –work between different departments of the company, which increased client’s service quality for 13%; 
-               • Improved ineffective policies in accounting, which fastened the provision of information to higher management;</p>
-            <p>Chief accountant (July 2015 – May 2018): Private Enterprise “Rivne-Flex” (Printing and manufacturing of packaging. 
-               Workforce - 50 people, number of subordinates - 2 pers.) • Implemented new accounting software for better supplying
-               of information for managers; • Developed skills and knowledge of the accountants, we could replace each other in case
-               of absence and provide information for higher management; • Improved the procedure of salary calculating, which helped 
-               employees to be more informed about their payment.</p>
+            <button class="accordion">Experience</button>
+            <div class="panel">
+                <h2>Experience</h2>
+                <p>Chief accountant (June 2018 — March 2022'): Manufacturing Enterprise Limited Liability Company "Akvaton"
+                   (Enameled wire production, wholesale, foreign economic activity; number of subordinates - 3 pers., 
+                   workforce - 85 people). • Kept accurate bookkeeping which gives good results of inspection by regulatory authorities;
+                   • Created team –work between different departments of the company, which increased client’s service quality for 13%; 
+                   • Improved ineffective policies in accounting, which fastened the provision of information to higher management;
+                </p>
+                <p>Chief accountant (July 2015 – May 2018): Private Enterprise “Rivne-Flex” (Printing and manufacturing of packaging. 
+                    Workforce - 50 people, number of subordinates - 2 pers.) • Implemented new accounting software for better supplying
+                    of information for managers; • Developed skills and knowledge of the accountants, we could replace each other in case
+                    of absence and provide information for higher management; • Improved the procedure of salary calculating, which helped 
+                    employees to be more informed about their payment.
+              </p>
+            </div>
 
-            <h2>Education</h2>
-            <p>Bachelor’s degree in Accounting and Auditing (completed in June 2003), National University of water and Environmental Engineering, Ukraine</p>
-            <p>Pathway Connect Certificate (completed in December 2022) BUY-Pathway Worldwide, USA: - a year-long program teaching life skills, English,
-               algebra and personal finance - introductory course “Programing building blocks”</p>
-            <p>BYU-Idaho, USA, “WEB & Computer Programing” (started in January 2023, currently studying)</p>
+            <button class="accordion">Education</button>
+            <div class="panel">
+                <h2>Education</h2>
+                <p>Bachelor’s degree in Accounting and Auditing (completed in June 2003), National University of water and Environmental Engineering, Ukraine</p>
+                <p>Pathway Connect Certificate (completed in December 2022) BUY-Pathway Worldwide, USA: - a year-long program teaching life skills, English,
+                algebra and personal finance - introductory course “Programing building blocks”</p>
+                <p>BYU-Idaho, USA, “WEB & Computer Programing” (started in January 2023, currently studying)</p>
+            </div>
 
-            <h2>Skills</h2>
-            <p>• Attention to details • Proficient PC user (MS Word, MS Excel) • Upper-intermediate level of English • Fluent Ukrainian and Russian
-               • Beginner level of French • Teamwork and collaboration • Tax monitoring and control • Accurate bookkeeping • Good organization skills
-               • High analytical skills</p>        
-
+            <button class="accordion">Skills</button>
+            <div class="panel">
+                <h2>Skills</h2>
+                <p>• Attention to details • Proficient PC user (MS Word, MS Excel) • Upper-intermediate level of English • Fluent Ukrainian and Russian
+                   • Beginner level of French • Teamwork and collaboration • Tax monitoring and control • Accurate bookkeeping • Good organization skills
+                   • High analytical skills
+                </p>        
+            </div>
         </main>
         <footer>
                 <p>Olena Slobodeniuk-2023</p>
@@ -62,5 +73,21 @@
                 <p><a href="site-plan.html">Site plan</a></p>
         </footer>
     </div>
+    <script>
+        var acc = document.getElementsByClassName("accordion");
+        var i;
+
+        for (i = 0; i < acc.length; i++) {
+            acc[i].addEventListener("click", function() {
+                this.classList.toggle("active");
+                var panel = this.nextElementSibling;
+                if (panel.style.maxHeight) {
+                  panel.style.maxHeight = null;
+                } else {
+                  panel.style.maxHeight = panel.scrollHeight + "px";
+                }
+            });
+        }
+    </script>
 </body>
 </html>
