--- a/portfolio/contactme.html
+++ b/portfolio/contactme.html
@@ -22,7 +22,7 @@
         </header>
         <div id="ican">
             <div id="ican-box">
-                <img id="ican-img" src="images/I can.png" alt="image2 for page3">
+                <img id="ican-img" src="images/Ican.png" alt="image2 for page3">
             </div>
            
         </div>
@@ -30,7 +30,7 @@
                    
             <img class="contact" src="images/pexels-pixabay-263564.jpg" alt="image1 for page3">
             <section class="msg1">
-                  <p>You can always reach me by:</p>
+                  <h2>You can always reach me by:</h2>
                   <p>phone +1(587) 433 55 93</p>
                   <p>or</p>
                   <p>email lena2805sl@gmail</p>
