--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -49,6 +49,7 @@
                 <p><a href="what_i_do.html">What I do</a></p>
                 <p><a href="contactus.html">Contact me</a></p>
                 <p><a href="site-plan.html">Site plan</a></p>
+                <p><a href="final_web_site_report.pdf">Final web site report</a></p>
         </footer>
     </div>
 </body>
